tests/ui/coherence/negative-coherence-considering-regions.any_lt.stderr
error[E0119]: conflicting implementations of trait `Bar` for type `&_`
  --> $DIR/negative-coherence-considering-regions.rs:22:1
   |
LL | impl<T> Bar for T where T: Foo {}
   | ------------------------------ first implementation here
...
LL | impl<T> Bar for &T {}
   | ^^^^^^^^^^^^^^^^^^ conflicting implementation for `&_`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
